--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,20 @@ spring:
   threads:
     virtual:
       enabled: true
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
 
 server:
   forward-headers-strategy: framework
