refactor: AWS S3 storage 기본 프로필 업로드 및 경로 설정

--- a/src/main/resources/application-database.yml
+++ b/src/main/resources/application-database.yml
@@ -17,4 +17,4 @@ logging:
     org:
       hibernate: info
 app:
-  default-profile-image-url: "https://test.image.png"
+  default-profile-image-url: "https://green-mate-t1-cdn.jayden-bin.cc/profile/default/default-profile.png"
